# trellis

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.agent_notes/: GRAND_PLAN.md
src/trellis/: __init__.py
src/trellis/datasets/: __init__.py  abstract.py  csv.py  parquet.py  sql.py
src/trellis/datasources/: __init__.py  abstract.py  sql.py
tests/: test_abstract_dataset.py  test_abstract_datasource.py  test_csv.py  test_csv_dataset.py  test_parquet.py  test_sql_dataset.py  test_sql_datasource.py
tmp/: 99-5114  99-5114-prompt
